# web-server

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main  main.cpp  p  test_file.txt
.github/workflows/: cmake-single-platform.yml
include/: endpoint_manager.hpp  http_methods.hpp  http_methods_helper.hpp  http_request.hpp  http_response.hpp  http_server.hpp  thread_pool.hpp  threadsafe_queue.hpp
include/concurrency_model/: thread_pool.hpp  threadsafe_queue.hpp
include/headers/: header_handler.hpp  header_handler_strategy.hpp
include/utilities/: compression.hpp  file_handler.hpp  http_methods_helper.hpp
src/: compression.cpp  endpoint_manager.cpp  file_handler.cpp  http_request.cpp  http_response.cpp  http_server.cpp
src/headers/: header_handler.cpp  header_handler_strategy.cpp
src/utilities/: file_handler.cpp
tests/: compression_test.cpp  concurrency_test.sh  endpoint_manager_test.cpp  file_handler_test.cpp  header_handler_test.cpp  http_request_test.cpp  http_response_test.cpp
